some small changes https fix  auth isauth fix
