# src/swagger-output.json
@@ -5,7 +5,7 @@
     "description": "API documentation for My Application",
     "version": "1.0.0"
   },
-  "host": "https://website-analytics-api-1.onrender.com",
+  "host": "website-analytics-api-1.onrender.com",
   "basePath": "/api",
   "schemes": [
     "https"
@@ -25,7 +25,7 @@
     "application/json"
   ],
   "paths": {
-    "/auth/google/login": {
+    "/google/login": {
       "get": {
         "description": "",
         "responses": {
@@ -35,7 +35,7 @@
         }
       }
     },
-    "/auth/google/callback": {
+    "/google/callback": {
       "get": {
         "description": "",
         "responses": {
@@ -45,7 +45,7 @@
         }
       }
     },
-    "/auth/register-app": {
+    "/register-app": {
       "post": {
         "description": "",
         "parameters": [
@@ -72,16 +72,13 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/auth/api-key": {
+    "/api-key": {
       "get": {
         "description": "",
         "responses": {
@@ -100,7 +97,7 @@
         }
       }
     },
-    "/auth/revoke-api-key": {
+    "/revoke-api-key": {
       "post": {
         "description": "",
         "parameters": [
@@ -136,7 +133,7 @@
         }
       }
     },
-    "/auth/failure": {
+    "/failure": {
       "get": {
         "description": "",
         "responses": {
